# PageRankAlgorithm

./: CMakeLists.txt  Makefile  README.md  main  tests
code/src/: PageRank.cpp  PageRank.h  main.cpp
code/tests/: benchmark_tests.cpp  tests.cpp
data/: 10WebPages.csv  2WebPages.csv  4WebPages.csv  ExtraLargeAmountWebPages.csv  LargeAmountWebPages.csv  Long.txt  Medium.txt  MediumAmountWebPages.csv  Really-Long.txt  Short-Medium.txt  Short.txt  pages.csv
docs/: proposal.md
